# Genn

./: CMakeLists.txt  README.md
src/: config.h  hook.cpp  hook.hpp  log.cpp  log.h  socket.h  thread.cpp  thread.h  util.cpp  util.h
tests/: test.cpp
